# opentrack

./: .gitignore  CMakeLists.txt
.cursor/skills/opentrack-build/: SKILL.md
.cursor/skills/opentrack-osx-issues/: SKILL.md
.cursor/skills/opentrack-psvr-issues/: SKILL.md
cmake/: opentrack-version.cmake
dev/: README.md  hot-install.sh  psvr-poweron.c  setup-signing-cert.sh
macosx/: make-app-bundle.sh
proto-iokit-foohid/lang/: nl_NL.ts  ru_RU.ts  stub.ts  zh_CN.ts
proto-wine/: ftnoir_protocol_wine.h
tracker-fusion/: fusion.cpp  fusion.h
tracker-psvr/: CMakeLists.txt  psvr.cpp  psvr.h  psvr_camera.h  psvr_camera.mm  psvr_constellation.cpp  psvr_constellation.h  psvr_mirror.h  psvr_mirror.mm
tracker-psvr/lang/: de_DE.ts  nl_NL.ts  ru_RU.ts  stub.ts  zh_CN.ts
x-plane-plugin/: README.md  plugin.c
